fixtures/invalid/28-v0.7-non-canonical-pillar/input.anatomy
anatomy_version = "0.7"
tagline = "Non-canonical pillar ID fixture"

[identity]
stack = "TypeScript"
form = "cli-tool"
domain = "developer-tools"
function = "config-validator"
fingerprint = "aaaaaaaaaaaaaaaaaaaa"

[generated]
at = 2026-05-07T00:00:00.000Z
by = "anatomy-cli@0.7.0"
model = "none"
schema = "https://anatomy.dev/spec/0.7/schema.json"
